--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12" *ngIf="(accountService.haveAccountIdentifier$ | async) === false">
     <div class="d-flex justify-content-center">
-      <input type="text" class="form-control" placeholder="{{accountIdentifierInputPlaceholder}}" [(ngModel)]="accountIdentifierInput" style="width: 32em;margin-right: 0.5rem;">
+      <input type="text" class="form-control input-field" placeholder="{{accountIdentifierInputPlaceholder}}" [(ngModel)]="accountIdentifierInput" style="width: 32em;margin-right: 0.5rem;">
       <button class="btn btn-success" style="margin-left: 0.5rem;" (click)="login()">
         <fa-icon *ngIf="accountService.isLoading$ | async" [icon]="faCircleNotch" animation="spin"></fa-icon>
         <span *ngIf="accountService.isLoading$ | async"> {{snippetService.getSnippet('my-farmer-component.login-button.label-logging-in')}}</span>
