--- a/src/app/generate-login-link/generate-login-link.component.html
+++ b/src/app/generate-login-link/generate-login-link.component.html
@@ -1,4 +1,4 @@
-<h5 style="color: #474747">Generate a login link</h5>
+<h5 class="settings-modal-text">Generate a login link</h5>
 <div class="row">
   <div class="col-12">
     <div class="alert alert-info" role="alert" style="font-size: 1.1rem">
