--- a/src/app/my-farmer/my-farmer.component.scss
+++ b/src/app/my-farmer/my-farmer.component.scss
@@ -1,6 +1,9 @@
 .text-align-center {
   text-align: center;
 }
+.no-border-color {
+  border-color: transparent;
+}
 .card-header {
   padding-bottom: 0.15rem;
 }
