--- a/src/app/update-difficulty/update-difficulty.component.html
+++ b/src/app/update-difficulty/update-difficulty.component.html
@@ -1,9 +1,9 @@
-<h5 style="color: #474747">Update your Farmer difficulty</h5>
+<h5 class="settings-modal-text">Update your Farmer difficulty</h5>
 <div class="row">
   <div class="col-12">
     <div class="form-check form-switch" style="padding-bottom: 0.5rem">
       <input type="checkbox" class="form-check-input" role="switch" id="isFixedDifficultyCheckbox" [(ngModel)]="isFixedDifficulty">
-      <label class="form-check-label text-color-and-size" for="isFixedDifficultyCheckbox" style="display: inline">Fixed difficulty</label>
+      <label class="form-check-label settings-modal-text bigger-text" for="isFixedDifficultyCheckbox" style="display: inline">Fixed difficulty</label>
     </div>
   </div>
 </div>
