--- a/src/app/update-minimum-payout/update-payout-options.component.html
+++ b/src/app/update-minimum-payout/update-payout-options.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h6 style="color: #474747">Configure a minimum payout amount</h6>
+  <h6 class="settings-modal-text">Configure a minimum payout amount</h6>
   <div class="row">
     <div class="col-12">
       <div class="input-group">
@@ -22,7 +22,7 @@
   </div>
 </div>
 <div class="mt-2">
-  <h6 style="color: #474747">Payout multiples of</h6>
+  <h6 class="settings-modal-text">Payout multiples of</h6>
   <div class="row">
     <div class="col-12">
       <div class="input-group">
