--- a/src/app/harvester-settings-modal/harvester-settings-modal.component.html
+++ b/src/app/harvester-settings-modal/harvester-settings-modal.component.html
@@ -1,6 +1,6 @@
 <ng-template #settingsModal let-dismiss="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title" style="color: #474747">Harvester Settings</h4>
+    <h4 class="modal-title settings-modal-text">Harvester Settings</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
