--- a/src/app/integration-settings/integration-settings.component.html
+++ b/src/app/integration-settings/integration-settings.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h6 style="color: #474747"><a href="https://dashboard.chia.foxypool.io" target="_blank">Chia-Dashboard</a> Share Key</h6>
+  <h6 class="settings-modal-text"><a href="https://dashboard.chia.foxypool.io" target="_blank">Chia-Dashboard</a> Share Key</h6>
   <div class="row">
     <div class="col-12">
       <form [formGroup]="form">
