--- a/src/app/update-name/update-name.component.html
+++ b/src/app/update-name/update-name.component.html
@@ -1,4 +1,4 @@
-<h5 style="color: #474747">{{snippetService.getSnippet('update-name-modal.title')}}</h5>
+<h5 class="settings-modal-text">{{snippetService.getSnippet('update-name-modal.title')}}</h5>
 <div class="row">
   <div class="col-12">
     <input type="text"
