Add support for deleting harvesters

--- a/src/app/authentication-modal/authentication-modal.component.html
+++ b/src/app/authentication-modal/authentication-modal.component.html
@@ -1,12 +1,12 @@
 <ng-template #authenticationModal let-dismiss="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title" style="color: #474747">{{snippetService.getSnippet('authentication-modal.title')}}</h4>
+    <h4 class="modal-title settings-modal-text">{{snippetService.getSnippet('authentication-modal.title')}}</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
     <div class="row">
       <div class="col-12">
-        <label for="messageToSign" class="form-label" style="color: #474747">{{snippetService.getSnippet('authentication-modal.message-to-sign')}}:</label>
+        <label for="messageToSign" class="form-label settings-modal-text">{{snippetService.getSnippet('authentication-modal.message-to-sign')}}:</label>
         <div id="messageToSign" class="input-group">
           <input type="text" class="form-control" [value]="message" disabled>
           <div class="input-group-text"
