Improve light mode bg colors

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,9 +9,9 @@ $input-placeholder-color: #6c757d;
 
 body {
   --text-color: #000;
-  --background-color: #fff;
+  --background-color: #f3f6f9;
   --card-background-color: initial;
-  --dropdown-menu-background-color: #fff;
+  --dropdown-menu-background-color: #fefefe;
   --dropdown-item-background-color-hover: #e9ecef;
   --dropdown-item-divider-color: initial;
   --table-border-color: initial;
@@ -19,7 +19,7 @@ body {
   --date-formatting-icon-color: initial;
   --info-icon-color: initial;
   --info-icon-color-hover: rgba(0, 0, 0, 0.6);
-  --navbar-background-color: rgb(248, 249, 250);
+  --navbar-background-color: #fefefe;
   --input-field-background-color: initial;
   --input-field-border-color: initial;
   --button-background-color: initial;
@@ -28,12 +28,12 @@ body {
   --button-border-color-hover: #c6c7c8;
   --button-color-hover: initial;
   --select-item-background-color: initial;
-  --footer-background-color: rgb(248, 249, 250);
+  --footer-background-color: #e8ebed;
   --highlight-color: rgba(0, 0, 0, 0.9);
   --highlight-color-hover: rgba(0, 0, 0, 0.6);
   --footer-spacer-background-image: url('./app/footer/spacer-light.svg');
   --progress-bar-background-color: #e9ecef;
-  --page-link-background-color: #fff;
+  --page-link-background-color: #f3f6f9;
   --page-link-border-color: rgba(0, 0, 0, 0.4);
   --nav-tabs-bottom-border-color: #e9ecef;
   --brand-text-color: #000;
