Add account image url

--- a/src/app/settings-modal/settings-modal.component.html
+++ b/src/app/settings-modal/settings-modal.component.html
@@ -7,10 +7,10 @@
     <div class="row">
       <div class="col-12 col-sm-3 settings-nav">
         <ul ngbNav #nav="ngbNav" class="nav-pills">
-          <li ngbNavItem="update-name" [destroyOnHide]="true">
-            <a class="text-decoration-none" ngbNavLink>Update name</a>
+          <li ngbNavItem="update-account" [destroyOnHide]="true">
+            <a class="text-decoration-none" ngbNavLink>Account</a>
             <ng-template ngbNavContent>
-              <app-update-name></app-update-name>
+              <app-update-account></app-update-account>
             </ng-template>
           </li>
           <li ngbNavItem="minimum-payout" [destroyOnHide]="true">
