--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -24,7 +24,10 @@
       </ngb-alert>
     </div>
     <div class="row mb-1">
-      <div class="col-12 col-md">
+      <div class="col-auto my-auto pe-0" *ngIf="accountImageUrl$ | async">
+        <img [src]="accountImageUrl$ | async" class="img-fluid rounded profile-picture-image">
+      </div>
+      <div class="col col-md">
         <div>
           <span *ngIf="accountService.account.name !== undefined" class="mb-0 fw-light fs-2">{{accountService.account.name}}</span>
           <ng-template #badgeContent>
