--- a/src/app/my-farmer/my-farmer.component.scss
+++ b/src/app/my-farmer/my-farmer.component.scss
@@ -102,12 +102,24 @@
   border-left: unset;
   border-right: unset;
 }
+.profile-picture-image {
+  max-height: 3.9rem;
+  margin-bottom: -0.3rem;
+}
+@media (max-width:864px) {
+  .profile-picture-image {
+    max-height: 5.6rem;
+  }
+}
+@media (max-width:472px) {
+  .profile-picture-image {
+    max-height: 7.2rem;
+  }
+}
 @media (max-width:576px) {
   .nav-tabs-no-border {
     border: unset;
   }
-}
-@media (max-width:576px) {
   .duration-selection {
     padding-bottom: 1rem;
   }
